--- a/source/gateway/src/main/resources/application.yml
+++ b/source/gateway/src/main/resources/application.yml
@@ -30,6 +30,30 @@ spring:
             allowedHeaders:
               - "*"
 
+
+      routes:
+        - id: userWithAuth
+          uri: http://${service.user_domain}:${service.user_port}
+          predicates:
+            - Path=/api/user/sanityCheck/authenticationCheck,/api/user/users/updateName
+          filters:
+            - RewritePath=/api/user/(?<segment>.*), /${segment}
+            - AuthorizationHeaderFilter
+
+        - id: userNoAuth
+          uri: http://${service.user_domain}:${service.user_port}
+          predicates:
+            - Path=/api/user/**
+          filters:
+            - RewritePath=/api/user/(?<segment>.*), /${segment}
+
+
+        - id: frontend
+          uri: http://${service.frontend_domain}:${service.frontend_port}
+          predicates:
+            - Path=/**
+
+
 logging:
   level:
     root: WARN
@@ -46,114 +70,33 @@ jwt:
 spring:
   profiles: host
 
-  cloud:
-    gateway:
-      routes:
-        - id: userAuthCheck
-          uri: http://localhost:8082
-          predicates:
-            - Path=/api/user/sanityCheck/authenticationCheck
-            - Method=GET
-          filters:
-            - RewritePath=/api/user/(?<segment>.*), /${segment}
-            - AuthorizationHeaderFilter
+service:
+  user_domain: localhost
+  user_port: 8082
 
-        - id: userChangeName
-          uri: http://localhost:8082
-          predicates:
-            - Path=/api/user/users/updateName
-            - Method=PUT
-          filters:
-            - RewritePath=/api/user/(?<segment>.*), /${segment}
-            - AuthorizationHeaderFilter
-
-        - id: user
-          uri: http://localhost:8082
-          predicates:
-            - Path=/api/user/**
-          filters:
-            - RewritePath=/api/user/(?<segment>.*), /${segment}
-
-
-        - id: frontend
-          uri: http://localhost:3000
-          predicates:
-            - Path=/**
+  frontend_domain: localhost
+  frontend_port: 3000
 
 ---
 
 spring:
   profiles: docker
 
-  cloud:
-    gateway:
-      routes:
-        - id: userAuthCheck
-          uri: http://host.docker.internal:8082
-          predicates:
-            - Path=/api/user/sanityCheck/authenticationCheck
-            - Method=GET
-          filters:
-            - RewritePath=/api/user/(?<segment>.*), /${segment}
-            - AuthorizationHeaderFilter
+service:
+  user_domain: host.docker.internal
+  user_port: 8082
 
-        - id: userChangeName
-          uri: http://host.docker.internal:8082
-          predicates:
-            - Path=/api/user/users/updateName
-            - Method=PUT
-          filters:
-            - RewritePath=/api/user/(?<segment>.*), /${segment}
-            - AuthorizationHeaderFilter
-
-        - id: user
-          uri: http://host.docker.internal:8082
-          predicates:
-            - Path=/api/user/**
-          filters:
-            - RewritePath=/api/user/(?<segment>.*), /${segment}
-
-
-        - id: frontend
-          uri: http://host.docker.internal:3000
-          predicates:
-            - Path=/**
+  frontend_domain: host.docker.internal
+  frontend_port: 3000
 
 ---
 
 spring:
   profiles: kubernates
 
-  cloud:
-    gateway:
-      routes:
-        - id: userAuthCheck
-          uri: http://user:8080
-          predicates:
-            - Path=/api/user/sanityCheck/authenticationCheck
-            - Method=GET
-          filters:
-            - RewritePath=/api/user/(?<segment>.*), /${segment}
-            - AuthorizationHeaderFilter
+service:
+  user_domain: user
+  user_port: 8080
 
-        - id: userChangeName
-          uri: http://user:8080
-          predicates:
-            - Path=/api/user/users/updateName
-            - Method=PUT
-          filters:
-            - RewritePath=/api/user/(?<segment>.*), /${segment}
-            - AuthorizationHeaderFilter
-
-        - id: user
-          uri: http://user:8080
-          predicates:
-            - Path=/api/user/**
-          filters:
-            - RewritePath=/api/user/(?<segment>.*), /${segment}
-
-
-        - id: frontend
-          uri: http://frontend:3000
-          predicates:
-            - Path=/**
+  frontend_domain: frontend
+  frontend_port: 3000
