--- a/externalTool/serverTester/ServerTester/ServerTester/ServerTester.csproj
+++ b/externalTool/serverTester/ServerTester/ServerTester/ServerTester.csproj
@@ -114,5 +114,9 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <Content Include="Resources\icon.ico" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
