Feat: Xml 파일 탐색 기반 마련

--- a/externalTool/serverTester/ServerTester/ServerTester/ServerTester.csproj
+++ b/externalTool/serverTester/ServerTester/ServerTester/ServerTester.csproj
@@ -78,7 +78,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CopilotSample.cs" />
+    <None Include="CopilotSample.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
