--- a/externalTool/serverTester/ServerTester/ServerTester/ServerTester.csproj
+++ b/externalTool/serverTester/ServerTester/ServerTester/ServerTester.csproj
@@ -87,6 +87,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestItem\TestItemService.cs" />
     <Compile Include="Util\HttpUtil.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
