변수 교체 시스템 기반 마련

--- a/.gitignore
+++ b/.gitignore
@@ -26,4 +26,6 @@ obj/
 packages/
 
 # baseCodeGenerator
+externalTool/baseCodeGenerator/input/settings.json
 externalTool/baseCodeGenerator/output/*
+externalTool/baseCodeGenerator/node_modules
