Feat: 커멘드 변수가 자동으로 세팅되도록 만듬

--- a/externalTool/baseCodeGenerator/input/settings_template.json
+++ b/externalTool/baseCodeGenerator/input/settings_template.json
@@ -3,6 +3,10 @@
         "PACKAGE_NAME": "",
         "SERVICE_NAME": "",
         "OPEN_PORT": 0,
-        "HOST_PORT": 0
+        "HOST_PORT": 0,
+
+        "DOCKER_IMAGE_NAME": "",
+        "DOCKER_SERVICE_NAME": "",
+        "DOKCER_IMAGE_UESR_NAME": ""
     }
 }
