Copilot: 코드 수집 스크립트 추가

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,6 @@ packages/
 externalTool/baseCodeGenerator/input/settings.json
 externalTool/baseCodeGenerator/output/*
 externalTool/baseCodeGenerator/node_modules
+
+# compilot
+**/All*Codes.java
