Feat: 테스트 샘플 코드를 자동으로 수집하는 커맨드 작성

--- a/.gitignore
+++ b/.gitignore
@@ -31,4 +31,4 @@ externalTool/baseCodeGenerator/output/*
 externalTool/baseCodeGenerator/node_modules
 
 # compilot
-**/All*Codes.java
+**/All*Codes.*
