Feat: CollectedData 서비스 통신 기반 마련

--- a/source/recommendCalcSystem/kubernetes/deployment.yaml
+++ b/source/recommendCalcSystem/kubernetes/deployment.yaml
@@ -19,3 +19,9 @@ spec:
           image: $k8s_image
           ports:
             - containerPort: $k8s_port
+          
+          env:
+            - name: COLLECTED_DATA_HOST
+              value: $COLLECTED_DATA_HOST_VALUE
+            - name: COLLECTED_DATA_PORT
+              value: $COLLECTED_DATA_PORT_VALUE
