--- a/source/collectedData/pom.xml
+++ b/source/collectedData/pom.xml
@@ -65,6 +65,17 @@
 			<artifactId>spring-cloud-starter-stream-kafka</artifactId>
 		</dependency>
 
+		<!-- 웹 소켓 의존성 -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-websocket</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20231013</version>
+		</dependency>
+
 		<!-- 기타 헬퍼 의존성 -->
 		<dependency>
 				<groupId>org.projectlombok</groupId>
