Feat: 프론트엔드 기반 마련

--- a/compose/all-service.yml
+++ b/compose/all-service.yml
@@ -158,3 +158,9 @@ services:
       - "8088:8088"
     environment:
       SPRING_PROFILES_ACTIVE: docker
+  
+
+  book-generator-frontend:
+    image: sinsung6722/book-generator-frontend:v1
+    ports:
+      - "3000:3000"
