Feat: 참조용 샘플 복제 작업

--- a/externalTool/frontendTester/FrontendTester/FrontendTester/FrontendTester.csproj
+++ b/externalTool/frontendTester/FrontendTester/FrontendTester/FrontendTester.csproj
@@ -54,6 +54,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <None Include="TestItem\TestItemService.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -80,7 +81,8 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="resource\icon.ico" />
+    <Content Include="Resource\icon.ico" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
