--- a/externalTool/frontendTester/FrontendTester/FrontendTester/FrontendTester.csproj
+++ b/externalTool/frontendTester/FrontendTester/FrontendTester/FrontendTester.csproj
@@ -64,7 +64,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service\SeleniumService.cs" />
     <None Include="packages.config" />
-    <None Include="Service\TestItemService.cs" />
+    <Compile Include="Service\TestItemService.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
