Feat: 작업 리스트 카드 기반 추가

--- a/externalTool/CICDAutomate/CICDAutomate/CICDAutomate/CICDAutomate.csproj
+++ b/externalTool/CICDAutomate/CICDAutomate/CICDAutomate/CICDAutomate.csproj
@@ -71,6 +71,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Component\PipelineJobListCardControl.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Update="Component\PipelineJobSelectCardControl.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
